# pymsdl_template

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  project.ini  project.py  pyproject.toml  setup.py
.github/actions/bump_version/: action.yml
.github/actions/dependency_check/: action.yml
.github/actions/dev_env_docker/: action.yml
.github/actions/lint/: action.yml
.github/actions/mutation_test/: action.yml
.github/actions/publish/: action.yml
.github/actions/typing/: action.yml
.github/actions/unit_test/: action.yml
.github/workflows/: ci.yml  new_version.yml  on_release.yml  weekly_checks.yml
docker/: Dockerfile  Dockerfile.devenv
docker/app/: Dockerfile
docker/devenv/: Dockerfile
src/main/python/hellopymsdl/: __main__.py
src/main/python/hellopymsdl/service/: MessageService.py
src/main/python/hellopysdl/: __main__.py
src/main/python/hellopysdl/service/: MessageService.py
src/main/resources/hellopymsdl_rsrc/: message.txt
src/test/python/hellopymsdl_test/: test__main__.py
src/test/python/hellopymsdl_test/service/: test_MessageService.py
src/test/python/hellopysdl_test/service/: test_MessageService.py
src/test/resources/hellopysdl_test_rsrc/: test_message.txt
